style.css
/* ... */
#celek .highlightsHeader {
  text-align: center;
  margin-bottom: 55px;
  position: relative;
  height: 115px;
  display: flex;
  flex-direction: column;
  align-content: center;
  justify-content: center;
}

#celek .highlightsHeader::before {
  content: "";
  display: block;
  position: absolute;
  top: -10px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 10;
  background: url("images/ring.png") no-repeat;
  width: 118px;
  height: 161px;
}

#celek .highlightsHeading {
  font-size: 70px;
  font-weight: 400;
}

#celek .highlightsHeading__fix {
  position: relative;
  top: 10px;
}

#celek .highlightsText {
  font-size: 18px;
  font-weight: 400;
  line-height: 30px;
}

#celek .highlightsSubtitle {
  font-size: 24px;
}

/*********BLOCK SIX*********/

#celek .blockSix {
  margin-bottom: 65px;
}

/*********BLOCK SEVEN*********/

#celek .blockSeven {
  position: relative;
}

#celek .sliderTypeOne {
  position: relative;
}

#celek .slider__arrowContainerLeft,
#celek .slider__arrowContainerRight {
  position: absolute;
  bottom: 0;
}

#celek .slider__arrowContainerLeft {
  left: 0;
}

#celek .slider__arrowContainerRight {
  right: 0;
}

#celek .sliderTypeOne__counter {
  background: linear-gradient(227deg, #1c2d5a, #2484c6);
  width: 90px;
  height: 90px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 100%;
  position: absolute;
  z-index: 99;
  left: 50%;
  transform: translateX(-50%);
  top: -45px;
  font-size: 27px;
  color: white;
}

#celek #sliderCountItem__GX546S2 {
  font-weight: 500;
  padding-right: 5px;
}

#celek #sliderCountTotal__GX546S2 {
  font-weight: 400;
  padding-left: 5px;
  opacity: 0.7;
}

#celek .slider__mobileBottomContent {
  display: none;
}

#celek .blockSeven__text {
  font-size: 18px;
  line-height: 26px;
  color: #464646;
  font-weight: 300;
  max-height: 500px;
  animation: all 0.5s ease;
}

#celek .blockSeven__header {
  text-align: left;
  width: 75%;
  margin-bottom: 24px;
}

#celek .sliderOne__arrow {
  position: absolute;
  z-index: 10;
  top: 32px;
}

#celek .sliderOne__arrowLeft {
  left: 16px;
}

#celek .sliderOne__arrowRight {
  right: 16px;
}

#celek .slider__arrowContainerSliderOne {
  background-color: white;
  z-index: 99;
  position: absolute;
}

#celek .sliderOne__arrowRing {
  width: 59px;
  height: 80px;
  position: absolute;
  top: 10px;
}

#celek .sliderOne__RingRight {
  right: 0;
}

#celek .slider__headerMobile {
  display: none;
}

/*********BLOCK EIGHT*********/

#celek .blockEight {
  margin: 77px 0;
  background: url("images/arc.JPG") no-repeat;
  background-position-y: 80px;
  background-size: contain;
}

#celek .blockEight__imageContainer {
  text-align: center;
}

#celek .blockEight__image {
  width: 30%;
  max-width: 383px;
  margin: auto;
}

#celek .blockEight__text {
  color: rgb(45, 62, 77);
  font-style: italic;
  font-size: 24px;
  line-height: 38px;
  width: 60%;
  margin: auto;
  text-align: center;
}

/*********BLOCK NINE*********/

#celek #video__GF65F2 {
  width: 100%;
  text-align: center;
}

#celek .blockNine {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 86.6%;
  margin: auto;
  margin-bottom: 70px;
  padding-bottom: 13px;
  border-bottom: 3px solid #eaf0f5;
}

#celek .videoCaption {
  font-size: 16px;
  line-height: 19px;
  color: #253746;
  margin-top: 18px;
  width: 576px;
  text-align: center;
}

#celek .videoContainer {
  position: relative;
  z-index: 9;
  display: grid;
}

#celek .playButtonContainer {
  position: absolute;
  z-index: 99;
  left: 50%;
  transform: translateX(-50%);
  align-self: center;
}

#celek .playButtonContainer:hover {
  cursor: pointer;
}

/*********BLOCK TEN*********/

#celek .blockTen {
  background: linear-gradient(45deg, #2484c6, #1c2d5a);
  color: white;
  padding: 47px 0 100px;
  border-radius: 0 280px 0 0;
  margin-bottom: 89px;
}

#celek .contentsHeader {
  text-align: center;
  font-weight: 400;
  font-size: 34px;
  line-height: 46px;
  margin-bottom: 74px;
}

#celek .contentsContainer {
  display: flex;
  justify-content: center;
  gap: 89px;
}

#celek .contentsList {
  display: flex;
  flex-direction: column;
  gap: 20px;
  font-size: 18px;
  font-weight: 400;
}

/*********BLOCK ELEVEN********/

#celek .blockEleven {
  width: 86.64%;
  margin: auto;
}

#celek .slider {
  display: flex;
  justify-content: space-between;
  gap: 30px;
  margin-top: 15px;
}

#celek .slider__image {
  width: 100%;
}

#celek .sliderContainer {
  display: flex;
  overflow: hidden;
  scroll-behavior: smooth;
}

#celek .sliderTypeOne__dummy {
  width: 19.2%;
  flex: none;
}

#celek .sliderTypeOne {
  gap: 21px;
  position: relative;
}

#celek .blockSeven__top::before,
#celek .blockSeven__top::after {
  content: "";
  width: 19.2%;
  height: 490px;
  display: block;
  position: absolute;
  z-index: 9;
  top: 0;
}

#celek .sliderTypeOne__imageContainer {
  margin-bottom: 44px;
}

#celek .blockSeven__top::before {
  background: linear-gradient(270deg, #ffffff00 0%, #ffffff 100%);
  left: -1px;
}

#celek .blockSeven__top::after {
  background: linear-gradient(90deg, #ffffff00 0%, #ffffff 100%);
  right: -1px;
}

#celek .sliderTypeTwo {
  gap: 28px;
}

#celek .sectionDivider {
  height: 3px;
  width: 86%;
  background-color: #eaf0f5;
  margin: 41px auto 0;
}

#celek .slider__arrow {
  position: relative;
  z-index: 10;
  top: 105px;
  left: 16px;
}

#celek .slider__arrowNext:hover,
#celek .slider__arrowPrev:hover {
  cursor: pointer;
}

#celek .slider__arrowContainer {
  position: relative;
  z-index: 999;
}

#celek .slider__arrowRing {
  width: 59px;
  height: 80px;
  position: relative;
  top: 43px;
}

#celek .slider__header {
  height: 70px;
  margin-bottom: 16px;
  font-size: 16px;
  color: #2484c6;
  line-height: 24px;
}

#celek .slider__price {
  text-align: center;
  margin-bottom: 22px;
  font-size: 18px;
  font-weight: 600;
}
/* ... */

